courses/430_programming-languages/assignment-6/tests/error/hw4_error02.correct
operator '+' requires int * int or string * string, found bool * string
